<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="false"
    android:layout_weight="1"
    android:background="@drawable/starfield"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_weight=".35"
        android:adjustViewBounds="true"
        android:contentDescription="@string/velocity_invaders_logo_cv"
        android:cropToPadding="true"
        android:foregroundGravity="top"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/invasores_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/descriptionTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:fontFamily="@font/gotham_rounded_bold"
            android:gravity="center"
            android:text="@string/invaders_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@drawable/gradient_button_velocity"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/androidx.appcompat.widget.AppCompatTextView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/gotham_rounded_bold"
                android:foregroundGravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/invaders_description_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/expectedScoreTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_round"
                android:ems="10"
                android:fontFamily="@font/gotham_rounded_bold"
                android:foregroundGravity="center"
                android:gravity="center"
                android:hint="@string/velocity_game_expected_score_input_hint"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:padding="3dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHint="#e1e1e1" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/instructionsTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/gotham_rounded_book"
            android:gravity="center"
            android:text="@string/invaders_instructions"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <Button
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/transparent"
            android:fontFamily="@font/gotham_rounded_bold"
            android:foregroundGravity="bottom"
            android:text="@string/invaders_play_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>