<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:app="http://schemas.android.com/apk/res-auto"
                                       xmlns:tools="http://schemas.android.com/tools"
                                       android:layout_height="match_parent"
                                       android:layout_width="match_parent" android:layout_weight="1"
                                       android:fillViewport="true">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:orientation="vertical" android:layout_marginRight="@dimen/activity_horizontal_margin"
                  android:layout_marginLeft="@dimen/activity_horizontal_margin"
                  android:layout_marginTop="@dimen/activity_vertical_margin"
                  android:layout_marginBottom="@dimen/activity_vertical_margin">
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:gravity="center"
                android:text="@string/planning_poker_game_intro_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_rounded_bold"
                android:textSize="30sp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="25dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/planningPokerDescriptionTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/planning_poker_game_intro_description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_rounded_book"
                android:textSize="18sp" android:layout_gravity="center"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginBottom="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/planningPokerDescription2Tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/planning_poker_game_intro_description_2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:fontFamily="@font/gotham_rounded_book"
                    android:textSize="18sp" android:layout_gravity="center" android:layout_weight="0.5"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" app:srcCompat="@drawable/planning_poker_bus"
                    android:id="@+id/planning_poker_bus_im" android:layout_weight="1" android:cropToPadding="true"
                    android:adjustViewBounds="true" android:contentDescription="@string/planning_poker_bus_cv"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/productBacklogTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/planning_poker_game_intro_product_backlog"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="@font/gotham_rounded_book"
                android:textSize="24sp" android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_backlog_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp" android:layout_weight="1"
                tools:listitem="@layout/fragment_game_planning_poker_intro_rv_item" tools:itemCount="10"/>
        <Button
                android:id="@+id/continue_button"
                style="@style/Button.SendAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_text"
                android:textAllCaps="false"
                android:visibility="visible" android:fontFamily="@font/gotham_rounded_bold"
                android:textColor="@color/white" android:background="@drawable/button_round_purple_background"
                android:paddingLeft="30dp" android:paddingTop="5dp" android:paddingRight="30dp"
                android:paddingBottom="5dp" android:layout_marginTop="20dp"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>